--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 calculate_rep_sea.sh
 calculate_rep_sea.py
 calculate_rep_spacegm.py
+eval_braak.sh
 calculate_rep_spacegm.sh
 eval_cell_clustering_baseline.sh
 eval_cell_clustering.sh
