--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,17 @@ eval_cell_clustering_baseline.sh
 eval_cell_clustering.sh
 eval_cli.txt
 graphMAE.py
-GWT.py
 main.sh
+GWT.py
 representation_quality.sh
 logs/
 data/
 saved_models/
+calculate_rep_spacegm_2.sh
+baseline_melanoma.py
+calculate_rep_melanoma.py
+eval_mlp_charville.py
+eval_melanoma.sh
+eval_space_gm.sh
+graphmae.sh
+main_ddp.sh
